// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rightbar matches snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  z-index: 1199;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0 .MuiDrawer-paper {
  height: calc(100% - 90px);
  top: 90px;
  box-sizing: border-box;
}

@media (min-width:0px) {
  .emotion-0 {
    width: 0;
  }
}

@media (min-width:600px) {
  .emotion-0 {
    width: 0;
  }
}

@media (min-width:900px) {
  .emotion-0 {
    width: 18em;
  }
}

@media (min-width:1200px) {
  .emotion-0 {
    width: 18em;
  }
}

@media (min-width:1536px) {
  .emotion-0 {
    width: 22em;
  }
}

@media (min-width:0px) {
  .emotion-0 .MuiDrawer-paper {
    width: 0;
  }
}

@media (min-width:600px) {
  .emotion-0 .MuiDrawer-paper {
    width: 0;
  }
}

@media (min-width:900px) {
  .emotion-0 .MuiDrawer-paper {
    width: 18em;
  }
}

@media (min-width:1200px) {
  .emotion-0 .MuiDrawer-paper {
    width: 18em;
  }
}

@media (min-width:1536px) {
  .emotion-0 .MuiDrawer-paper {
    width: 22em;
  }
}

.emotion-1 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: none;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  z-index: 1200;
  -webkit-overflow-scrolling: touch;
  position: fixed;
  top: 0;
  outline: 0;
  right: 0;
  border-left: 1px solid rgba(0, 0, 0, 0.12);
}

.emotion-2 {
  width: 100%;
  margin-left: auto;
  box-sizing: border-box;
  margin-right: auto;
  display: block;
  padding-left: 16px;
  padding-right: 16px;
}

@media (min-width:600px) {
  .emotion-2 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:1200px) {
  .emotion-2 {
    max-width: 1200px;
  }
}

.emotion-3 {
  text-align: center;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-5 {
  width: 100%;
  margin-left: auto;
  box-sizing: border-box;
  margin-right: auto;
  display: block;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #fff;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  border-radius: 8px;
  padding: 0.6em;
  overflow-x: auto;
  margin-bottom: 1.2em;
}

@media (min-width:600px) {
  .emotion-5 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:1200px) {
  .emotion-5 {
    max-width: 1200px;
  }
}

.emotion-6 {
  padding-right: 1.2em;
  display: inline-block;
  font-size: 1.1em;
  font-weight: 700;
}

.emotion-7 {
  padding-right: 1.2em;
  display: inline-block;
}

.emotion-8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.25rem;
  vertical-align: sub;
  color: #29b6f6;
}

.emotion-9 {
  padding-right: 1.2em;
  display: inline-block;
  color: rgba(0, 0, 0, 0.6);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(46, 125, 50, 0.5);
  color: #2e7d32;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 100%;
  margin-top: 0.5em;
}

.emotion-10::-moz-focus-inner {
  border-style: none;
}

.emotion-10.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-10 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(46, 125, 50, 0.04);
  border: 1px solid #2e7d32;
}

@media (hover: none) {
  .emotion-10:hover {
    background-color: transparent;
  }
}

.emotion-10.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  border: 1px solid rgba(0, 0, 0, 0.12);
}

.emotion-10 .MuiLoadingButton-startIconLoadingStart,
.emotion-10 .MuiLoadingButton-endIconLoadingEnd {
  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  opacity: 0;
}

.emotion-10.MuiLoadingButton-loading {
  color: transparent;
}

.emotion-11 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  box-sizing: border-box;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  min-width: 20px;
  line-height: 1;
  padding: 0 6px;
  height: 20px;
  border-radius: 10px;
  z-index: 1;
  -webkit-transition: -webkit-transform 195ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: transform 195ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  top: 0;
  right: 0;
  -webkit-transform: scale(1) translate(50%, -50%);
  -moz-transform: scale(1) translate(50%, -50%);
  -ms-transform: scale(1) translate(50%, -50%);
  transform: scale(1) translate(50%, -50%);
  transform-origin: 100% 0%;
}

.emotion-12.MuiBadge-invisible {
  -webkit-transform: scale(0) translate(50%, -50%);
  -moz-transform: scale(0) translate(50%, -50%);
  -ms-transform: scale(0) translate(50%, -50%);
  transform: scale(0) translate(50%, -50%);
}

.emotion-19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  vertical-align: sub;
  margin-left: 0.25em;
  font-size: small;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  box-sizing: border-box;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  min-width: 20px;
  line-height: 1;
  padding: 0 6px;
  height: 20px;
  border-radius: 10px;
  z-index: 1;
  -webkit-transition: -webkit-transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  top: 0;
  right: 0;
  -webkit-transform: scale(1) translate(50%, -50%);
  -moz-transform: scale(1) translate(50%, -50%);
  -ms-transform: scale(1) translate(50%, -50%);
  transform: scale(1) translate(50%, -50%);
  transform-origin: 100% 0%;
}

.emotion-21.MuiBadge-invisible {
  -webkit-transform: scale(0) translate(50%, -50%);
  -moz-transform: scale(0) translate(50%, -50%);
  -ms-transform: scale(0) translate(50%, -50%);
  transform: scale(0) translate(50%, -50%);
}

.emotion-22 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 36px;
  height: 36px;
}

.emotion-23 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

<div
    class="MuiDrawer-root MuiDrawer-docked emotion-0"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight emotion-1"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg emotion-2"
      >
        <h3
          class="emotion-3"
        >
          Open tasks
        </h3>
        <span
          class="MuiBadge-root emotion-4"
          style="width: 100%;"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthLg emotion-5"
          >
            <span
              class="emotion-6"
            >
              Vacuum
            </span>
            <br />
            <span
              class="emotion-7"
            >
              40 
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
                data-testid="DiamondIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.16 3h-.32L9.21 8.25h5.58zm4.3 5.25h5.16L19 3h-5.16zm4.92 1.5h-8.63V20.1zM11.25 20.1V9.75H2.62zM7.54 8.25 10.16 3H5L2.38 8.25z"
                />
              </svg>
            </span>
            <span
              class="emotion-9"
            >
              1/1/2022
            </span>
            <span
              aria-label=""
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiLoadingButton-root MuiButton-root MuiButton-outlined MuiButton-outlinedSuccess MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root emotion-10"
                id="mui-1"
                tabindex="0"
                type="button"
              >
                Complete
                <span
                  class="MuiTouchRipple-root emotion-11"
                />
              </button>
            </span>
          </div>
          <span
            class="MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-invisible emotion-12"
          />
        </span>
        <span
          class="MuiBadge-root emotion-4"
          style="width: 100%;"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthLg emotion-5"
          >
            <span
              class="emotion-6"
            >
              Clean
            </span>
            <br />
            <span
              class="emotion-7"
            >
              60 
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
                data-testid="DiamondIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.16 3h-.32L9.21 8.25h5.58zm4.3 5.25h5.16L19 3h-5.16zm4.92 1.5h-8.63V20.1zM11.25 20.1V9.75H2.62zM7.54 8.25 10.16 3H5L2.38 8.25z"
                />
              </svg>
            </span>
            <span
              class="emotion-9"
            >
              1/9/2022
              <svg
                aria-hidden="true"
                aria-label="Recurring task"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-19"
                data-mui-internal-clone-element="true"
                data-testid="LoopIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
                />
              </svg>
            </span>
            <span
              aria-label="Only tasks within the next week can be completed"
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiLoadingButton-root MuiButton-root MuiButton-outlined MuiButton-outlinedSuccess MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root Mui-disabled emotion-10"
                disabled=""
                id="mui-4"
                tabindex="-1"
                type="button"
              >
                Complete
              </button>
            </span>
          </div>
          <span
            class="MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight emotion-21"
          >
            <div
              aria-label="You are assigned"
              class="MuiAvatar-root MuiAvatar-circular emotion-22"
              data-mui-internal-clone-element="true"
            >
              <img
                alt="User Name"
                class="MuiAvatar-img emotion-23"
                src="Picture"
              />
            </div>
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rightbar matches snapshot DE 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  z-index: 1199;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0 .MuiDrawer-paper {
  height: calc(100% - 90px);
  top: 90px;
  box-sizing: border-box;
}

@media (min-width:0px) {
  .emotion-0 {
    width: 0;
  }
}

@media (min-width:600px) {
  .emotion-0 {
    width: 0;
  }
}

@media (min-width:900px) {
  .emotion-0 {
    width: 18em;
  }
}

@media (min-width:1200px) {
  .emotion-0 {
    width: 18em;
  }
}

@media (min-width:1536px) {
  .emotion-0 {
    width: 22em;
  }
}

@media (min-width:0px) {
  .emotion-0 .MuiDrawer-paper {
    width: 0;
  }
}

@media (min-width:600px) {
  .emotion-0 .MuiDrawer-paper {
    width: 0;
  }
}

@media (min-width:900px) {
  .emotion-0 .MuiDrawer-paper {
    width: 18em;
  }
}

@media (min-width:1200px) {
  .emotion-0 .MuiDrawer-paper {
    width: 18em;
  }
}

@media (min-width:1536px) {
  .emotion-0 .MuiDrawer-paper {
    width: 22em;
  }
}

.emotion-1 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: none;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  z-index: 1200;
  -webkit-overflow-scrolling: touch;
  position: fixed;
  top: 0;
  outline: 0;
  right: 0;
  border-left: 1px solid rgba(0, 0, 0, 0.12);
}

.emotion-2 {
  width: 100%;
  margin-left: auto;
  box-sizing: border-box;
  margin-right: auto;
  display: block;
  padding-left: 16px;
  padding-right: 16px;
}

@media (min-width:600px) {
  .emotion-2 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:1200px) {
  .emotion-2 {
    max-width: 1200px;
  }
}

.emotion-3 {
  text-align: center;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-5 {
  width: 100%;
  margin-left: auto;
  box-sizing: border-box;
  margin-right: auto;
  display: block;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #fff;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  border-radius: 8px;
  padding: 0.6em;
  overflow-x: auto;
  margin-bottom: 1.2em;
}

@media (min-width:600px) {
  .emotion-5 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:1200px) {
  .emotion-5 {
    max-width: 1200px;
  }
}

.emotion-6 {
  padding-right: 1.2em;
  display: inline-block;
  font-size: 1.1em;
  font-weight: 700;
}

.emotion-7 {
  padding-right: 1.2em;
  display: inline-block;
}

.emotion-8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.25rem;
  vertical-align: sub;
  color: #29b6f6;
}

.emotion-9 {
  padding-right: 1.2em;
  display: inline-block;
  color: rgba(0, 0, 0, 0.6);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(46, 125, 50, 0.5);
  color: #2e7d32;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 100%;
  margin-top: 0.5em;
}

.emotion-10::-moz-focus-inner {
  border-style: none;
}

.emotion-10.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-10 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(46, 125, 50, 0.04);
  border: 1px solid #2e7d32;
}

@media (hover: none) {
  .emotion-10:hover {
    background-color: transparent;
  }
}

.emotion-10.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  border: 1px solid rgba(0, 0, 0, 0.12);
}

.emotion-10 .MuiLoadingButton-startIconLoadingStart,
.emotion-10 .MuiLoadingButton-endIconLoadingEnd {
  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  opacity: 0;
}

.emotion-10.MuiLoadingButton-loading {
  color: transparent;
}

.emotion-11 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  box-sizing: border-box;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  min-width: 20px;
  line-height: 1;
  padding: 0 6px;
  height: 20px;
  border-radius: 10px;
  z-index: 1;
  -webkit-transition: -webkit-transform 195ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: transform 195ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  top: 0;
  right: 0;
  -webkit-transform: scale(1) translate(50%, -50%);
  -moz-transform: scale(1) translate(50%, -50%);
  -ms-transform: scale(1) translate(50%, -50%);
  transform: scale(1) translate(50%, -50%);
  transform-origin: 100% 0%;
}

.emotion-12.MuiBadge-invisible {
  -webkit-transform: scale(0) translate(50%, -50%);
  -moz-transform: scale(0) translate(50%, -50%);
  -ms-transform: scale(0) translate(50%, -50%);
  transform: scale(0) translate(50%, -50%);
}

.emotion-19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  vertical-align: sub;
  margin-left: 0.25em;
  font-size: small;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  box-sizing: border-box;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  min-width: 20px;
  line-height: 1;
  padding: 0 6px;
  height: 20px;
  border-radius: 10px;
  z-index: 1;
  -webkit-transition: -webkit-transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  top: 0;
  right: 0;
  -webkit-transform: scale(1) translate(50%, -50%);
  -moz-transform: scale(1) translate(50%, -50%);
  -ms-transform: scale(1) translate(50%, -50%);
  transform: scale(1) translate(50%, -50%);
  transform-origin: 100% 0%;
}

.emotion-21.MuiBadge-invisible {
  -webkit-transform: scale(0) translate(50%, -50%);
  -moz-transform: scale(0) translate(50%, -50%);
  -ms-transform: scale(0) translate(50%, -50%);
  transform: scale(0) translate(50%, -50%);
}

.emotion-22 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 36px;
  height: 36px;
}

.emotion-23 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

<div
    class="MuiDrawer-root MuiDrawer-docked emotion-0"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight emotion-1"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg emotion-2"
      >
        <h3
          class="emotion-3"
        >
          Offene Aufgaben
        </h3>
        <span
          class="MuiBadge-root emotion-4"
          style="width: 100%;"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthLg emotion-5"
          >
            <span
              class="emotion-6"
            >
              Vacuum
            </span>
            <br />
            <span
              class="emotion-7"
            >
              40 
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
                data-testid="DiamondIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.16 3h-.32L9.21 8.25h5.58zm4.3 5.25h5.16L19 3h-5.16zm4.92 1.5h-8.63V20.1zM11.25 20.1V9.75H2.62zM7.54 8.25 10.16 3H5L2.38 8.25z"
                />
              </svg>
            </span>
            <span
              class="emotion-9"
            >
              1.1.2022
            </span>
            <span
              aria-label=""
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiLoadingButton-root MuiButton-root MuiButton-outlined MuiButton-outlinedSuccess MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root emotion-10"
                id="mui-7"
                tabindex="0"
                type="button"
              >
                Erledigen
                <span
                  class="MuiTouchRipple-root emotion-11"
                />
              </button>
            </span>
          </div>
          <span
            class="MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-invisible emotion-12"
          />
        </span>
        <span
          class="MuiBadge-root emotion-4"
          style="width: 100%;"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthLg emotion-5"
          >
            <span
              class="emotion-6"
            >
              Clean
            </span>
            <br />
            <span
              class="emotion-7"
            >
              60 
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
                data-testid="DiamondIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.16 3h-.32L9.21 8.25h5.58zm4.3 5.25h5.16L19 3h-5.16zm4.92 1.5h-8.63V20.1zM11.25 20.1V9.75H2.62zM7.54 8.25 10.16 3H5L2.38 8.25z"
                />
              </svg>
            </span>
            <span
              class="emotion-9"
            >
              9.1.2022
              <svg
                aria-hidden="true"
                aria-label="Aufgabe wiederholt sich"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-19"
                data-mui-internal-clone-element="true"
                data-testid="LoopIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
                />
              </svg>
            </span>
            <span
              aria-label="Es können nur Aufgaben innerhalb der nächsten Woche erledigt werden"
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiLoadingButton-root MuiButton-root MuiButton-outlined MuiButton-outlinedSuccess MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root Mui-disabled emotion-10"
                disabled=""
                id="mui-10"
                tabindex="-1"
                type="button"
              >
                Erledigen
              </button>
            </span>
          </div>
          <span
            class="MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight emotion-21"
          >
            <div
              aria-label="Du bist zugeordnet"
              class="MuiAvatar-root MuiAvatar-circular emotion-22"
              data-mui-internal-clone-element="true"
            >
              <img
                alt="User Name"
                class="MuiAvatar-img emotion-23"
                src="Picture"
              />
            </div>
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
